# ridgenine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  codecov.yml
docs/: generate_readme_plots.py
src/ridgenine/: __init__.py  geom_density_ridges.py  geom_density_ridges_gradient.py  geom_ridgeline.py  stat_binline.py  stat_density_ridges.py  theme_ridges.py
tests/: conftest.py  test_geom_density_ridges.py  test_geom_ridgeline.py  test_gradient.py  test_jittered_points.py  test_new_features.py  test_quantile_lines.py  test_stat_binline.py  test_stat_density_ridges.py
