[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ridgenine"
version = "0.1.1"
description = "Ridgeline plots for plotnine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "plotnine>=0.14",
]

[project.urls]
Homepage = "https://github.com/briandconnelly/ridgenine"
Repository = "https://github.com/briandconnelly/ridgenine"
"Bug Tracker" = "https://github.com/briandconnelly/ridgenine/issues"
Changelog = "https://github.com/briandconnelly/ridgenine/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ridgenine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ridgenine --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["src/ridgenine"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
